Upload and synchronize posts

--- a/feedback/app/views/feedback/posts/_post.html.erb
+++ b/feedback/app/views/feedback/posts/_post.html.erb
@@ -2,4 +2,12 @@
     Description: <%= post.description %>
     <br>
     Status: <%= post.status %>
+    <br>
+    Last synchronized: <%= post.last_synchronized_at %>
+    <br>
+    <% if post.issue_url.present? %>
+        You can see it <a href=<%= post.issue_url %>> here </a>
+    <% end %>
+
+    <%= button_to "synchronize", post_synchronize_path(post) %>
 </div>
