Enable adding comments

--- a/feedback/app/views/feedback/posts/_post.html.erb
+++ b/feedback/app/views/feedback/posts/_post.html.erb
@@ -1,4 +1,6 @@
 <div>
+    Details: <%= link_to(post.id, post) %>
+    <br>
     Description: <%= post.description %>
     <br>
     Status: <%= post.status %>
