Enable uploading comment and synchronizing from Github

--- a/feedback/app/views/comments/_comment.html.erb
+++ b/feedback/app/views/comments/_comment.html.erb
@@ -2,7 +2,7 @@
 
     On <%= comment.created_at.strftime("%A, %B %e, %Y at %l:%M %p") %>
 
-    <strong> <%= comment.user&.name || "App Admin" %> </strong> said:
+    <strong> <%= comment.creator&.name || "App Admin" %> </strong> said:
 
     <%= comment.content %>
 </div>
