Move templates around

--- a/feedback/app/views/feedback/posts/show.html.erb
+++ b/feedback/app/views/feedback/posts/show.html.erb
@@ -5,12 +5,12 @@
 <h2> Comments </h2>
 
 <% @post.comments.each do |comment| %>
-    <%= render "comments/comment", comment: %>
+    <%= render "feedback/comments/comment", comment: %>
 <% end %>
 
 <br>
 
-<%= render "comments/form", post: @post %>
+<%= render "feedback/comments/form", post: @post %>
 
 <br>
 
