--- a/feedback/app/views/feedback/posts/_post.html.erb
+++ b/feedback/app/views/feedback/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div style="border: solid 0.1rem; padding: 0.4rem;">
     Details: <%= link_to(post.id, post) %>
     <br>
     Description: <%= post.description %>
