Add basic cs locale

--- a/feedback/app/views/feedback/posts/_post.html.erb
+++ b/feedback/app/views/feedback/posts/_post.html.erb
@@ -11,5 +11,5 @@
         You can see it <a href=<%= post.issue_url %>> here </a>
     <% end %>
 
-    <%= button_to "synchronize", post_synchronize_path(post) %>
+    <%= button_to t("synchronize"), post_synchronize_path(post) %>
 </div>
