--- a/feedback/app/views/feedback/index/show.html.erb
+++ b/feedback/app/views/feedback/index/show.html.erb
@@ -1,13 +1,13 @@
-Welcome to feedback page!
-<br>
-You already gave us <%= @posts.size %> feedbacks, thanks!
+<%= t("Welcome") %>
 
 <p>
-Send new feedback:
+
+<%= t("Send feedback") %>:
+
 <%= render "feedback/posts/form" %>
 
 <p>
-Feedbacks:
+    
 <% @posts.each do |post| %>
     <%= render "feedback/posts/post", post: post %>
 <% end %>
