--- a/feedback/app/views/feedback/posts/_post.html.erb
+++ b/feedback/app/views/feedback/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <div style="border: solid 0.1rem; padding: 0.4rem;">
-    Details: <%= link_to(post.id, post) %>
+    Details: <%= link_to(t("Show more"), post) %>
     <br>
-    Description: <%= post.description %>
+    What: <%= post.description %>
     <br>
     Status: <%= post.status %>
     <br>
