--- a/feedback/app/views/feedback/posts/index.html.erb
+++ b/feedback/app/views/feedback/posts/index.html.erb
@@ -1,3 +1,5 @@
+<%= t("My feedback") %> :
+
 <% @posts.each do |post| %>
-    <%= render "post", post: post %>
+    <%= render "post", post: %>
 <% end %>
