--- a/app/views/layouts/public_application.html.slim
+++ b/app/views/layouts/public_application.html.slim
@@ -7,7 +7,7 @@ html
       = yield(:title).presence
 
     - unless Rails.env.production?
-      link rel="canonical" href="https://sborio.cz"
+      link rel="canonical" href="https://skautskakucharka.cz"
       
     meta name="viewport" content="width=device-width,initial-scale=1"
     = csrf_meta_tags
