--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,3 +6,7 @@
 .strong-highlight {
   background-color: darkgreen;
 }
+
+.card-shadow:hover {
+  box-shadow: 0 0.15rem 0 0px rgba(0, 0, 0, 0.25);
+}
