Update card to be able to make it same height for grid row

--- a/app/components/card_component.html.slim
+++ b/app/components/card_component.html.slim
@@ -1,4 +1,4 @@
-.bg-white.rounded-xl.border.border-black.border-1.p-4.h-100.mb-2.card-shadow class="#{classes}"
+.bg-white.rounded-xl.border.border-black.border-1.p-4.mb-2.card-shadow class="#{classes}"
   .font-bold.text-lg data-turbo="false"
     = heading || name
 
