Why bother with good commits when you can just push all

--- a/app/components/tables/row_component.html.slim
+++ b/app/components/tables/row_component.html.slim
@@ -1,5 +1,5 @@
-tr.bg-white.hover:bg-gray-100.group id=dom_id(record, "table-row")
+tr.group id=dom_id(record, "table-row")
   - columns.each do |column|
-    td.px-3.py-4.text-sm.whitespace-nowrap.text-gray-500 class=column.css_class
+    td.px-3.py-4.text-sm.whitespace-nowrap.text-gray-500.group-hover:bg-peach-200.group-hover:first:rounded-l-xl.group-hover:last:rounded-r-xl class=column.css_class
       - value = render(column.value_for(record, view_context: __vc_original_view_context))
       = column.link_to_detail? ? admin_link_to(value, record) : value
