--- a/app/views/recipes/_recipe_card.html.slim
+++ b/app/views/recipes/_recipe_card.html.slim
@@ -4,8 +4,14 @@
             .grid.grid-cols-2
                 = link_to(recipe.name, recipe, data: {turbo: false})
                 .text-right
-                    = svg("heart")
-                    = recipe.reactions.size
+                    - if recipe.liked_by?(current_user)
+                        = button_to liked_recipe_path(recipe), method: :delete, class: "inline-block" do
+                            = svg("heart-filled", class: "text-red")
+                            = recipe.reactions.size
+                    - else
+                        = button_to liked_recipes_path(recipe_id: recipe.id), method: :post, class: "inline-block" do
+                            = svg("heart")
+                            = recipe.reactions.size
         = card.with_body do
             .grid.grid-cols-2
                 = recipe.category&.name
@@ -15,29 +21,3 @@
             .mt-2.flex.flex-wrap
                 - recipe.labels.each do |label|
                     = label_badge(label)
-
-
-
-    / .border.rounded.border-emerald-500.p-4.m-2.h-full
-    /     .text-center.text-xl.text-emerald-900.mb-2.font-semibold
-    /         = link_to recipe.name, recipe, data: {turbo: false}
-    /     div
-    /         = recipe.category&.name
-    /         span.float-right
-    /             = recipe.author.full_name
-    /     .mb-1
-    /         - if recipe.liked_by?(current_user)
-    /             = button_to liked_recipe_path(recipe), method: :delete, class: "inline-block" do
-    /                 = svg("heart-filled")
-    /                 = recipe.reactions.size
-    /         - else
-    /             = button_to liked_recipes_path(recipe_id: recipe.id), method: :post, class: "inline-block" do
-    /                 = svg("heart")
-    /                 = recipe.reactions.size
-
-    /     hr
-
-    /     .mt-2.flex.flex-wrap id="#{dom_id(recipe)}-labels"
-    /         - recipe.labels.each do |label|
-    /             = label_badge(label)
-    
