--- a/app/views/shared/_navbar_link.html.slim
+++ b/app/views/shared/_navbar_link.html.slim
@@ -4,7 +4,7 @@
 
 
 a href=link class=classes
-    li.rounded-md.py-2.px-2.hover:underline.hover:underline-offset-8.hover:decoration-emerald-700.hover:decoration-4
-        span.block.py-4.pl-3.pr-4.text-emerald-700.font-bold.rounded.md:border-0.md:p-0
+    li.rounded-md.py-2.px-2.hover:bg-ocean-400
+        span.block.py-4.pl-3.pr-4.text-white.font-bold.rounded.md:border-0.md:p-0
             = svg(icon.to_s, class: "inline me-1") if icon.present?
             = text if text.present?
