--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,14 +1,14 @@
-nav.mt-4.mb-4.hidden.sm:block
+nav.mb-4.hidden.sm:block
     .flex.flex-wrap.items-center.py-3.px-4.mx-auto.bg-ocean-700
         a href="/"
             / img.h-12.mr-1 src=image_url("logos/logo.png") alt="navarit"
      
         ul.flex.font-medium.ms-2.ps-4.cursor-pointer.md:p-0.border.border-gray-100.rounded-lg.md:flex-row.md:space-x-8.md:mt-0.md:border-0.dark:bg-gray-800.md:dark:bg-gray-900.dark:border-gray-700
-            = render "shared/navbar_link", link: dashboard_path, text: "domů"
-            = render "shared/navbar_link", link: ingredients_path, icon: "plant", text: "suroviny"
-            = render "shared/navbar_link", link: recipes_path, icon: "utensils", text: "recepty"
-            = render "shared/navbar_link", link: events_path, icon: "calendar", text: "akce"
+            = render "shared/navbar_link", link: dashboard_path, icon: :house, text: "domů"
+            = render "shared/navbar_link", link: events_path, icon: :calendar, text: "akce"
             = render "shared/navbar_link", link: published_recipes_path, icon: "book-open", text: "databáze receptů"
+            = render "shared/navbar_link", link: recipes_path, icon: :notepad, text: "moje recepty"
+            = render "shared/navbar_link", link: ingredients_path, icon: :carrot, text: "moje suroviny"
 
         
         ul.flex.ml-auto.cursor-pointer
