--- a/app/views/shared/_navbar_link.html.slim
+++ b/app/views/shared/_navbar_link.html.slim
@@ -2,9 +2,8 @@
 - icon = local_assigns[:icon] || nil
 - text = local_assigns[:text] || nil
 
-
 a href=link class=classes
     li.rounded-md.py-2.px-2.hover:bg-ocean-400
         span.block.py-4.pl-3.pr-4.text-white.font-bold.rounded.md:border-0.md:p-0
-            = svg(icon.to_s, class: "inline me-1") if icon.present?
+            = icon(icon.to_s, class: "inline me-1") if icon.present?
             = text if text.present?
