--- a/app/views/events/_card.html.slim
+++ b/app/views/events/_card.html.slim
@@ -1,9 +1,10 @@
 /# locals: (event:, classes: "")
 
-= render CardComponent.new(event, class: classes) do |card|
-    = card.with_heading do
-        = link_to event.name, event
-    = card.with_body do
-        = "#{event.begins_at.to_fs(:simple)} - #{event.ends_at.to_fs(:simple)}"
-        br
-        = "#{event.duration} dní"
+div data={"controller": "clickable", "clickable-url-value": event_path(event)}
+    = render CardComponent.new(event, class: classes, wrapper_link: event_path(event)) do |card|
+        = card.with_heading do
+            = link_to event.name, event
+        = card.with_body do
+            = "#{event.begins_at.to_fs(:simple)} - #{event.ends_at.to_fs(:simple)}"
+            br
+            = "#{event.duration} dní"
