--- a/app/components/card_component.html.slim
+++ b/app/components/card_component.html.slim
@@ -1,5 +1,5 @@
 .bg-white.rounded-xl.border.border-black.border-1.p-4.mb-2.card-shadow class="#{classes}"
-  .font-bold.text-lg data-turbo="false"
+  .text-2xl.mb-2 data-turbo="false"
     = heading || name
 
   div.mt-1
