--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -12,9 +12,9 @@ nav.mb-4.hidden.sm:block
 
         
         ul.flex.ml-auto.cursor-pointer
-            button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button"
+            button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button"
                 = current_user.name || current_user.email
-                = svg("dropdown-caret", class: "ml-1 w-4 h-4 inline")
+                = icon("caret-down", class: "ml-1 w-4 h-4 text-white")
 
             div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
                 ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"
