--- a/app/views/event_portion_types/index.html.slim
+++ b/app/views/event_portion_types/index.html.slim
@@ -1,5 +1,12 @@
 - content_for :title, "velikosti porcí"
 
+- content_for :breadcrumbs do
+  = link_to("akce", events_path, class: "hover:underline text-ocean-800")
+  = " > "
+  = link_to(@event.name, event_path(@event), class: "hover:underline text-ocean-800")
+  = " > "
+  = "strávníci"
+
 / = render "event_attendance/menu"
 
 div id="#{dom_id(@event)}-portion-types"
