--- a/app/views/events/_day_card.html.slim
+++ b/app/views/events/_day_card.html.slim
@@ -2,13 +2,11 @@
 
 - daily_plan = day.daily_plan.presence
 - day_dom_id = daily_plan.present? ? dom_id(day.daily_plan) : nil
-- border_color_class = daily_plan.present? ? "bg-peach-200" : "bg-peach-100"
-- border_color_class += " hidden md:inline" unless daily_plan.present?
 
-div id="#{day_dom_id}-card" class=border_color_class
+div id="#{day_dom_id}-card" class="#{daily_plan.present? ? "bg-peach-200" : "bg-peach-100 hidden md:inline"}"
   div.text-xl.mt-2.ps-2
     - if daily_plan.present?
-      = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-emerald-700", data: {turbo: false} do 
+      = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-ocean-700", data: {turbo: false} do 
         = weekday_name(day.date)
         = day.date.strftime(" %d.%m.")
 
