--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,11 @@ h3 {
   margin-bottom: 0.5rem; 
 }
 
+a {
+  color: #085366; /* ocean-700 */
+}
+
+
 .highlight {
   background-color: darkgreen;
 }
